<resources>
    <string name="app_name">Fixed BD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="favorite">Wish List</string>
    <string name="search">Shopping Cart</string>
    <string name="fragment_home">Fixed BD</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Orders</string>
    <string name="menu_track_order">Track Order</string>
    <string name="menu_slideshow">Dashboard</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contact">Contact Us</string>
    <string name="search_product">Search</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="recent_product">Recent Products</string>
    <string name="life_style">Life Style</string>
    <string name="exclusive_pro">Exclusive Products</string>
    <string name="footer_txt">Developed by SBIT</string>
    <string name="flash_txt">Flash Sale</string>
    <string name="shop_t">Shop</string>
    <string name="title_activity_login">Fixed BD</string>
    <string name="prompt_email">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >=4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Don\'t have an Account?</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="verbtn">Verify</string>
    <string name="view_cart">Buy Now</string>
    <string name="delete_selected_item">Delete Selected Item</string>
    <string name="all">All</string>
    <string name="signup">Sign up</string>
    <string name="forgot">Forgot Password?</string>
    <string name="check_out">check out</string>
    <string name="total">Total:</string>
    <string name="ship">Shipping Ch.:</string>
    <string name="net">Net T.:</string>
    <string name="product_name">পণ্যের নাম</string>
    <string name="out_stock">Stock Out</string>
    <string name="in_stock">In Stock</string>
    <string name="description">Description</string>
    <string name="releted_t">Releted Product</string>
    <string name="ordered_on">ORDERED ON</string>
    <string name="oid">OID-</string>
    <string name="order_status">ORDER STATUS</string>
    <string name="edit_personal_info">Edit Personal Info</string>
    <string name="ch_pass_info">Change Password</string>
    <string name="add_info">Address</string>
    <string name="mobile_no">Mobile NO</string>
    <string name="code">Code</string>
    <string name="tran_id">Transaction ID</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="p_code">পণ্য কোড</string>
    <string name="p_name_e">পণ্যের নাম (ইংরেজি)</string>
    <string name="p_name_b">পণ্যের নাম (বাংলা)</string>
    <string name="min_s">ন্যূনতম পরিমাণ</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="y_ques">Your Question</string>
    <string name="last_name">Last Name</string>
    <string name="business">Business Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="email_ph">Email/Phone</string>
    <string name="town">Town</string>
    <string name="del_add">Full Address for Delivery</string>
    <string name="prormo">Promo Code(Optional)</string>
    <string name="country">দেশ নির্বাচন করুন</string>
    <string name="s_item">একটি আইটেম নির্বাচন করুন</string>
    <string name="s_category">একটি বিভাগ নির্বাচন করুন</string>
    <string name="s_subcategory">একটি উপ-বিভাগ নির্বাচন করুন</string>
    <string name="s_brand">একটি ব্র্যান্ড নির্বাচন করুন</string>
    <string name="s_seller">একজন বিক্রেতা নির্বাচন করুন</string>
    <string name="s_mes_type">পরিমাপ নির্বাচন করুন</string>
    <string name="district">Select District</string>
    <string name="thana_t">Select Thana</string>
    <string name="address">Delivery Address</string>
    <string name="registration">Registration</string>
    <string name="update_pro">Update Profile</string>
    <string name="already">Already have an account.</string>
    <string name="verify">Set your Info</string>
    <string name="v_text">A code is sent to your number, please check messages and enter here.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="sign_in">লগইন</string>
    <string name="sign">সাইন-ইন</string>
    <string name="dev">Privacy Policy</string>
    <string name="terms">Terms And Conditions</string>
    <string name="faq">FAQ</string>
    <string name="s_login">Member Section</string>
    <string name="s_reg">Member Registration</string>
    <string name="cart_h">Go to Home</string>
    <string name="sign_out">Log Out</string>
    <string name="billing_details">Billing Details</string>
    <string name="create_pro">পণ্য তৈরি করুন:</string>
    <string name="fill_info">তথ্য পূরণ করুন</string>
    <string name="order_details">Order Preview</string>
    <string name="pay_details">Payment Method</string>
    <string name="mini_quant">Minimum Quantity :</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount :</string>
    <string name="grand">Grand Total :</string>
    <string name="delivery">Delivery Charge :</string>
    <string name="apply_promo">Apply Promo</string>
    <string name="send">Send</string>
    <string name="verifyF">Verify your number</string>
    <string name="verifyT">A code is sent to your number, please check messages and enter here.</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="bkash">Bkash</string>
    <string name="rocket">Rocket</string>
    <string name="nagad">Nagad</string>
    <string name="place_order">Place Order</string>
    <string name="new_pro">New Product</string>
    <string name="empty_cart_des">You have no items in your shopping cart. Click Home to continue shopping.</string>
    <string name="show_more">Show More</string>
    <string name="about_salesman_bd">About Fixed BD</string>
    <string name="privacy">Our Privacy Policy</string>
    <string name="contact_T">Let\'s Get in Touch</string>
    <string name="Login">login</string>
    <string name="order_id">Order ID :</string>
    <string name="amount">Amount:</string>
    <string name="order_pending">Order Pending by Fixed BD</string>
    <string name="order_process">Order Processing by Fixed BD</string>
    <string name="order_way">Order on the way</string>
    <string name="order_success">Order Successfully Submitted</string>
    <string name="delivery_date">Delivery Date : Between</string>
    <string name="delivery_address">Delivery Address :</string>
    <string name="addr">Address</string>
    <string name="title_activity_flash_screen">FullscreenActivity</string>
    <string name="dummy_button">Bar Out</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="online_market_place">Online Market Place</string>
    <string name="order_not_found">Currently you don\'t placed any order</string>
    <string name="our_all_item">Our All Category</string>
    <string name="our_back_office">Our Back Office</string>
    <string name="trunk_road_feni">133 JATRABARI ,DHAKA, BANGLADESH</string>
    <string name="invoice_num">+880 1758956666</string>
    <string name="first_email">Email: MSTFATIMA777@GMAIL.COM</string>
    <string name="second_email"></string>
    <string name="invoice_id">Invoice ID :</string>
    <string name="order_date">Order Date :</string>
    <string name="payment_type">Payment Type :</string>
    <string name="del_d">Delivery Date :</string>
    <string name="go_to_shopping">Go To Shopping</string>
    <string name="screen">* Take a screenshot for the next need</string>
    <string name="title_activity_image_fullview">Product Image</string>
    <string name="quantity">Quantity :</string>
    <string name="sign_text">Please Login and enjoy your shopping</string>
    <string name="sign_up_txt">Please Registration and enjoy your shopping</string>
    <string name="title_activity_seller_nav">MainActivity</string>
    <string name="title_home">হোম</string>
    <string name="title_dashboard">বার্তা</string>
    <string name="type_a_message">Type a Message…</string>
    <string name="product_type">পণ্যের ধরন</string>
    <string name="best_sale">Best Sale</string>
    <string name="express_service">Express Service</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="others">Others</string>
    <string name="pack_box">Pack/Box</string>
    <string name="s">S</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="other">Other</string>
    <string name="golden">Golden</string>
    <string name="silver">Silver</string>
    <string name="orange">Orange</string>
    <string name="purchase_price">ক্রয় মূল্য</string>
    <string name="price_setup">মূল্য সেটআপ</string>
    <string name="sale_price">বিক্রয় মূল্য</string>
    <string name="current_price">বর্তমান মূল্য</string>
    <string name="product_condition">পণ্যের অবস্থা</string>
    <string name="short_description">ছোট বিবরণ</string>
    <string name="product_details">পণ্যের বিবরণ</string>
    <string name="product_maintain">পণ্য রক্ষণাবেক্ষণ</string>
    <string name="stock_available_out">স্টক উপলব্ধ/আউট</string>
    <string name="published_unpublished">প্রকাশিত/অপ্রকাশিত</string>
    <string name="shipping_class">শিপিং ক্লাস</string>
    <string name="submit">জমা দিন</string>
    <string name="pic">ছবি নির্বাচন করুন</string>
    <string name="clear">ক্লিয়ার</string>
    <string name="_0_files_selelcted">0 ছবি নির্বাচিত</string>
    <string name="product_description">পণ্যের বর্ণনা</string>
    <string name="all_product">আমার পণ্য</string>
    <string name="active_product">সক্রিয় পণ্য</string>
    <string name="inactive_product">নিষ্ক্রিয় পণ্য</string>
    <string name="add_product">পণ্য যোগ করুন</string>
    <string name="profile_settings">প্রোফাইল সেটিংস</string>
    <string name="back_to_shopping">শপিং -এ ফেরত যান</string>
    <string name="_0">0</string>
    <string name="not_found">পাওয়া যায় নি</string>
    <string name="sellers">Members</string>
    <string name="buy_earn"><![CDATA[BUY & EARN]]></string>
    <string name="otp_or_password">OTP or Password</string>
    <string name="otp_login">OTP Login</string>
    <string name="send_otp">Send OTP(optional)</string>
    <string name="create_account">Create Account</string>
    <string name="seller_panel">বিক্রেতা প্যানেল</string>
    <string name="refer_code_optional">Refer Code (Optional)</string>
    <string name="add_found">ফাউন্ড যোগ করুন</string>
    <string name="withdraw">ফাউন্ড উত্তোলন করুন</string>
    <string name="sale_withdraw">সেল ব্যালেন্স উত্তোলন</string>
    <string name="commision_withdraw">কমিশন ব্যালেন্স উত্তোলন</string>
    <string name="diposit_withdraw">ডিপোজিট ব্যালেন্স উত্তোলন</string>
    <string name="w_amount">উত্তোলন পরিমান</string>
    <string name="p_type">পেমেন্ট টাইপ</string>
    <string name="ac_number">অ্যাকাউন্ট নাম্বার</string>
    <string name="b_details">বিবরণ</string>
    <string name="b_req">রিকোয়েস্ট পাঠান</string>
</resources>