<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:textStyle="bold"
        android:text="@string/withdraw"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/type_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/p_type"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="dropdown_menu"
        app:layout_constraintBottom_toTopOf="@+id/amount_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:startIconDrawable="@drawable/ic_round_list_24">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext"
            android:editable="false"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/w_amount"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/account_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_lay"
        app:startIconDrawable="@drawable/ic_baseline_drive_file_rename_outline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/ac_number"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/det_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_lay"
        app:startIconDrawable="@drawable/ic_baseline_drive_file_rename_outline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext"
            android:inputType="text"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/det_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/b_details"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/add_fnd_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_lay"
        app:startIconDrawable="@drawable/ic_baseline_drive_file_rename_outline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/det"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_fnd_btn"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/main_color"
        android:paddingVertical="11dp"
        android:text="@string/b_req"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:icon="@drawable/send"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/det_lay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/det_lay"
        app:layout_constraintTop_toBottomOf="@+id/det_lay" />
</androidx.constraintlayout.widget.ConstraintLayout>