<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login_page.ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/sign_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/login_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp">

                    <ImageView
                        android:id="@+id/top_img"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:src="@drawable/ic_forgot_password_rafiki"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/username_lay"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/phone"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeWidth="0dp"
                        app:endIconMode="clear_text"
                        android:background="@drawable/edittext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/top_img">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"
                            android:selectAllOnFocus="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/otp_btn"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/main_over_lay"
                        android:paddingVertical="10dp"
                        android:text="@string/send_otp"
                        android:textColor="@color/main_color"
                        app:cornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="@+id/username_lay"
                        app:layout_constraintStart_toStartOf="@+id/username_lay"
                        app:layout_constraintTop_toBottomOf="@+id/username_lay" />

                    <TextView
                        android:id="@+id/timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:textColor="@color/white"
                        android:background="@color/white"
                        android:text="@string/phone"
                        android:paddingHorizontal="5dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/otp_btn"
                        app:layout_constraintEnd_toEndOf="@+id/otp_btn"
                        app:layout_constraintStart_toStartOf="@+id/otp_btn"
                        app:layout_constraintTop_toTopOf="@+id/otp_btn" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_lay"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/edittext"
                        android:hint="@string/otp_or_password"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionDone"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeWidth="0dp"
                        app:endIconMode="password_toggle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/otp_btn">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            android:selectAllOnFocus="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="20dp"
                        android:paddingVertical="11dp"
                        android:fontFamily="@font/poppins_semibold"
                        app:cornerRadius="10dp"
                        android:enabled="false"
                        android:text="@string/action_sign_in"
                        app:icon="@drawable/ic_round_login_24"
                        app:layout_constraintEnd_toEndOf="@+id/password_lay"
                        app:layout_constraintStart_toStartOf="@+id/password_lay"
                        app:layout_constraintTop_toBottomOf="@+id/password_lay" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/otp_log"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/poppins_semibold"
                        android:paddingVertical="11dp"
                        android:text="@string/otp_login"
                        android:visibility="gone"
                        app:cornerRadius="10dp"
                        app:icon="@drawable/ic_round_login_24"
                        app:layout_constraintEnd_toEndOf="@+id/password_lay"
                        app:layout_constraintStart_toStartOf="@+id/password_lay"
                        app:layout_constraintTop_toBottomOf="@+id/login" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/sign_up"
                        app:layout_constraintBottom_toBottomOf="@+id/sign_up"
                        app:layout_constraintEnd_toStartOf="@+id/sign_up"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/sign_up" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_up"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/signup"
                        app:layout_constraintStart_toEndOf="@+id/textView9"
                        app:layout_constraintTop_toBottomOf="@+id/otp_log" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/forgot_btn"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/forgot"
                        android:textAllCaps="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sign_up"
                        app:layout_constraintVertical_bias="0.2" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/scroll"
        app:layout_constraintStart_toStartOf="@+id/scroll"
        app:layout_constraintTop_toBottomOf="@+id/web_id" />



</androidx.constraintlayout.widget.ConstraintLayout>